backend/api/config/21-api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: tekton-hub
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: github.com/redhat-developer/tekton-hub/backend/api/cmd/api
          ports:
            - containerPort: 5000
