backend/api/config/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: github.com/redhat-developer/tekton-hub/backend/api/cmd/api
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30003
  type: NodePort

---
apiVersion: v1
kind: Route
metadata:
  name: backend-route
spec: 
  host: backend-svc-tekton-hub.apps-crc.testing
  to:
    kind: Service
    name: backend-svc
    weight: 100
  tls:
    termination: edge
status:
  ingress:
    - conditions:
        - status: "True"
          type: Admitted
  host: backend-svc-tekton-hub.apps-crc.testing
