backend/api/config/22-api-route.yaml
---
apiVersion: v1
kind: Route
metadata:
  name: api
spec:
  host: api-svc-tekton-hub.apps-crc.testing
  to:
    kind: Service
    name: api
    weight: 100
  tls:
    termination: edge
